[tool.poetry]
name = "di"
version = "0.40.1"
description = "Autowiring dependency injection"
authors = ["Adrian Garcia Badaracco <adrian@adriangb.com>"]
readme = "README.md"
repository = "https://github.com/adriangb/di"
documentation = "https://www.adriangb.com/di"
keywords = ["dependency-injection", "inversion-of-control", "SOLID", "IoC", "DI"]
license = "MIT"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
anyio = "~3"
importlib-metadata = {version = ">=3", python = "<3.8"}
typing-extensions = {version = ">=3", python = "<3.9"}
graphlib2 = ">=0.2.13"

[tool.poetry.dev-dependencies]
# linting
black = ">=21.12b0,<22"
flake8 = "~3.9"
isort = "~5.10"
mypy = "v0.930"
pre-commit = "~2"
# testing
pytest = "~6"
pytest-cov = { version = "~2"}
pytest-sugar = "~0"
trio = "~0"
coverage = {extras = ["toml"], version = "^6.0"}
# docs
mkdocs = "~1"
mkdocs-material = "~8,!=8.1.3"
mike = "~1"
# benchmarking
pyinstrument = "~4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["di", "tests", "docs"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", '\.\.\.', "raise NotImplementedError", "TYPE_CHECKING", "__repr__"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "di/**/*.py,tests/**/*.py,docs/src/**/*.py"
show_error_codes = true
pretty = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "di.*"
strict_equality = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
warn_unused_ignores = false
